@@ -9,6 +9,8 @@
     \item \code{distplot()} gets an \code{lwd} argument.
     \item Changed default line types for \code{sieve} so that positive residuals are
     shown with solid lines, as per Friendly specifications.
+    \item fixed problems with \code{pairs_strucplot()} type argument, particularly for
+    \code{type="conditional"}
   }
 }
 
